--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/pg": "^8.15.5",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "pg": "^8.16.3",
     "react": "19.1.0",
